updated to use batch norm

--- a/repsly_challenge/repsly_challenge.ipynb
+++ b/repsly_challenge/repsly_challenge.ipynb
@@ -93,18 +93,19 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "arch = [(250, False), (250, False)]\n",
+    "archs = (tuple((250, batch_norm) for _ in range(4)) for batch_norm in (True,))\n",
     "\n",
-    "keep_probs = np.linspace(0.4, 0.6, 3)\n",
-    "input_keep_probs = np.linspace(0.7, 1.0, 3)\n",
+    "keep_probs = np.linspace(0.5, 1.0, 1)\n",
+    "input_keep_probs = np.linspace(0.8, 1.0, 1)\n",
+    "batch_norm_decay = 0.95\n",
     "\n",
-    "learning_rate = 0.001\n",
-    "decay_steps=10\n",
+    "learning_rate = 0.0001\n",
+    "decay_steps=40\n",
     "decay_rate=0.99\n",
     "\n",
     "batch_size = 1024\n",
-    "epochs_loops = 5\n",
-    "epochs_at_once = 80\n",
+    "epochs_loops = 1\n",
+    "epochs_at_once = 1000\n",
     "skip_steps=20\n",
     "\n",
     "stats = {}\n",
@@ -113,13 +114,16 @@
     "    print('{}\\n*\\n* {}[{}/{}] Training for {} epochs\\n*\\n{}\\n'.\\\n",
     "          format('*'*116, ' '*40, i+1, epochs_loops, epochs_at_once, '*'*116))\n",
     "\n",
-    "    for keep_prob in keep_probs:\n",
-    "        for input_keep_prob in input_keep_probs:\n",
-    "            arch_dict = {'keep_prob': keep_prob, 'input_keep_prob': input_keep_prob}\n",
+    "    for arch in archs:\n",
+    "        for keep_prob in keep_probs:\n",
+    "            for input_keep_prob in input_keep_probs:\n",
+    "                arch_dict = {'keep_prob': keep_prob,\n",
+    "                             'input_keep_prob': input_keep_prob,\n",
+    "                             'batch_norm_decay': batch_norm_decay}\n",
     "\n",
-    "            repsly_nn.create_net(arch, arch_dict, learning_rate, decay_steps, decay_rate)\n",
-    "            stats[(keep_prob, input_keep_prob)] = repsly_nn.train(data=repsly_data, batch_size=batch_size, epochs=epochs_at_once, skip_steps=skip_steps)\n",
-    "            print(stats[(keep_prob, input_keep_prob)])"
+    "                repsly_nn.create_net(arch, arch_dict, learning_rate, decay_steps, decay_rate)\n",
+    "                stats[(keep_prob, input_keep_prob, arch)] = repsly_nn.train(data=repsly_data, batch_size=batch_size, epochs=epochs_at_once, skip_steps=skip_steps)\n",
+    "                print(stats[(keep_prob, input_keep_prob, arch)])"
    ]
   },
   {
@@ -138,7 +142,7 @@
    "outputs": [],
    "source": [
     "for ix in sorted(stats, key=lambda key: stats[key]['f1_score'], reverse=True)[:20]:\n",
-    "    print('{}: {} {}'.format(ix, stats[ix]['f1_score'], stats[ix]['loss']))"
+    "    print('{}:\\n  f1_score = {}    loss = {}'.format(ix, stats[ix]['f1_score'], stats[ix]['loss']))"
    ]
   },
   {
