--- a/repsly_challenge/repsly_challenge.ipynb
+++ b/repsly_challenge/repsly_challenge.ipynb
@@ -62,7 +62,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, we create a network with two fully connected hidden layers of size 250 and 50% dropout:"
+    "We will use Ensamble class for training and cross validation"
    ]
   },
   {
@@ -74,15 +74,51 @@
    "outputs": [],
    "source": [
     "from repsly_nn import RepslyFC\n",
+    "from ensamble import Ensamble\n",
     "\n",
-    "repsly_nn = RepslyFC()"
+    "ens = Ensamble()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arch = {\n",
+    "        'no_of_layers': {'lin': (4, 8)},\n",
+    "        'hidden_size': {'lin': (128, 384)},\n",
+    "        'use_batch_norm': 'True',\n",
+    "        'keep_prob': {'lin': (0.3, 0.70, 2)},\n",
+    "        'input_keep_prob': {'lin': (0.65, 0.95, 2)},\n",
+    "        'batch_norm_decay': 0.99 # {'inv-log': (0.9, 0.99, 2)},\n",
+    "}\n",
+    "learning_dict = {\n",
+    "    'learning_rate': 0.001,\n",
+    "    'decay_steps': 20,\n",
+    "    'decay_rate': 0.99 #{'inv-log': (0.99, 0.999, 3)}\n",
+    "}\n",
+    "train_dict = {\n",
+    "    'batch_size': 512,\n",
+    "    'epochs': 100,\n",
+    "    'skip_steps': 20\n",
+    "}\n",
+    "key='f1_score'\n",
+    "\n",
+    "no_of_nets = 5\n",
+    "no_of_loops = 50\n",
+    "\n",
+    "for _ in range(no_of_loops):\n",
+    "    ens.add_nets(RepslyFC, arch=arch, data=repsly_data, learning_dict=learning_dict, no_of_nets=no_of_nets)\n",
+    "    ens.train_untrained(train_dict)\n",
+    "    ens.print_stat_by_key('f1_score')\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then we train it for some number of epochs."
+    "We will train the best candidates a little bit more:"
    ]
   },
   {
@@ -91,39 +127,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
+    "no_of_top_nets = 0\n",
+    "no_of_loops = 0\n",
     "\n",
-    "archs = (tuple((250, batch_norm) for _ in range(4)) for batch_norm in (True,))\n",
-    "\n",
-    "keep_probs = np.linspace(0.5, 1.0, 1)\n",
-    "input_keep_probs = np.linspace(0.8, 1.0, 1)\n",
-    "batch_norm_decay = 0.95\n",
-    "\n",
-    "learning_rate = 0.0001\n",
-    "decay_steps=40\n",
-    "decay_rate=0.99\n",
-    "\n",
-    "batch_size = 1024\n",
-    "epochs_loops = 1\n",
-    "epochs_at_once = 1000\n",
-    "skip_steps=20\n",
-    "\n",
-    "stats = {}\n",
-    "\n",
-    "for i in range(epochs_loops):\n",
-    "    print('{}\\n*\\n* {}[{}/{}] Training for {} epochs\\n*\\n{}\\n'.\\\n",
-    "          format('*'*116, ' '*40, i+1, epochs_loops, epochs_at_once, '*'*116))\n",
-    "\n",
-    "    for arch in archs:\n",
-    "        for keep_prob in keep_probs:\n",
-    "            for input_keep_prob in input_keep_probs:\n",
-    "                arch_dict = {'keep_prob': keep_prob,\n",
-    "                             'input_keep_prob': input_keep_prob,\n",
-    "                             'batch_norm_decay': batch_norm_decay}\n",
-    "\n",
-    "                repsly_nn.create_net(arch, arch_dict, learning_rate, decay_steps, decay_rate)\n",
-    "                stats[(keep_prob, input_keep_prob, arch)] = repsly_nn.train(data=repsly_data, batch_size=batch_size, epochs=epochs_at_once, skip_steps=skip_steps)\n",
-    "                print(stats[(keep_prob, input_keep_prob, arch)])"
+    "for _ in range(no_of_loops):\n",
+    "    ens.train_top_nets_by_key_stat(key, no_of_top_nets, train_dict)\n",
+    "    ens.print_stat_by_key('f1_score')"
    ]
   },
   {
@@ -132,7 +141,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "{key: stats[key]['f1_score'] for key in stats.keys()}"
+    "ens.print_stat_by_key('f1_score')"
    ]
   },
   {
@@ -141,8 +150,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for ix in sorted(stats, key=lambda key: stats[key]['f1_score'], reverse=True)[:20]:\n",
-    "    print('{}:\\n  f1_score = {}    loss = {}'.format(ix, stats[ix]['f1_score'], stats[ix]['loss']))"
+    "ens.print_stat_by_key('loss', reverse=True)"
    ]
   },
   {
